[package]
name = "sarus-plugin"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "*"
# sarus = {git = "https://github.com/DGriffin91/sarus", branch = "main"}
sarus = {path = "../sarus"}
hound = "*"
tuix = {git = "https://github.com/geom3trik/tuix", branch = "reactive"}
femtovg = { git = "https://github.com/femtovg/femtovg", branch = "master" }